<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28dp"
                    android:layout_margin="8dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/mono"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="48dp"
                    android:padding="18dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/help_mono"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ceas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28dp"
                    android:layout_margin="8dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/caes"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="48dp"
                    android:padding="18dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/help_caes"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/atb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28dp"
                    android:layout_margin="8dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/at"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="48dp"
                    android:padding="18dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/help_atb"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28dp"
                    android:layout_margin="8dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/ver"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="48dp"
                    android:padding="18dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/help_vern"/>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/aes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28dp"
                    android:layout_margin="8dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/aes"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="48dp"
                    android:padding="18dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/help_aes"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/design_default_color_secondary"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                android:id="@+id/rail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28dp"
                    android:layout_margin="8dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/rail"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="48dp"
                    android:padding="18dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/help_rail"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>